--- a/style.css
+++ b/style.css
@@ -42,3 +42,33 @@ width: 50%;
 
 
 }
+.experience-area{
+
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+
+    box-shadow: 10px 10px 40px gray;
+    border-left: 10px solid;
+}
+#web-dev{
+    border-left: 7px solid;
+    border-image: linear-Gradient(blue,cyan);
+    border-image-slice: 1 ;
+}
+#full-stack {
+    border-left: 7px solid;
+    border-image: linear-Gradient( yellow,cyan);
+    border-image-slice: 1 ;
+}
+footer p{
+    text-align: center;
+}
